# cat-clicker-

./: .gitignore  .~lock.Cat_Clicker_Presentation.odp#  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cat_Clicker_Presentation.html  Cat_Clicker_Presentation.odp  Cat_Clicker_Presentation.pptx  Cat_Clicker_Presentation.pptx.ppt  Cat_Clicker_Presentation_Visual.html  Cat_Clicker_Prezi.html  Cat_Clicker_Prezi_Cute.html  Cat_Clicker_Prezi_Ultra.html  GITHUB_REPOSITORY_READY.md  GITHUB_SETUP.md  INSTALLATION.md  LICENSE  LinkedIn_Post_CatClicker.txt  QUICKSTART.md  README.md  ROADMAP.md  Untitled-1.c  build.bat  cat_clicker.c  convert.bat  convert_to_pptx.py  create_ppt.bat  create_ppt_com.ps1  fix_pptx.py  la communication dans les projets informatiques GT.odt  make_pptx_simple.ps1  make_valid_complete_pptx.py  make_valid_pptx.py
.github/workflows/: build.yml
